[package]
name = "omega-cache-macros"
version = "0.2.1"
edition = "2024"
description = "Procedural macros for the omega-cache library"
license = "MIT"
repository = "https://github.com/dmitriiantonov/omega-cache"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
